Fixed spacing on css and html
fixed spacing in main.css and exploration

--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@ html {
     box-sizing: inherit;
 
 }
+
 .awesome {
     float: left;
     margin-top: 1rem;
@@ -58,7 +59,7 @@ html {
 
 .table { 
     padding-bottom: 1rem;
-    padding-top: 1rem;
+    padding-top: 1rem
 }
 
 img {
@@ -104,13 +105,14 @@ form {
     padding-right: 25%;
     padding-left: 25%;
     padding-bottom: 1rem;
-text-align: center;
+    text-align: center;
 }
 
 .exploration { 
-text-align: center;
+    text-align: center;
     padding-top: 2rem;
 }
+
 .in input  {
     width: 100%;
     display: inline-block;  
@@ -159,8 +161,7 @@ header {
 
 footer {
     background-color: #BABABA;
-    overflow: hidden;
-    
+    overflow: hidden; 
 }
 
 .intro {
@@ -203,7 +204,6 @@ h1 {
 
 li .top {
      padding-bottom: 37px;
-
 }
 
 .medium-grey {
@@ -265,6 +265,7 @@ span {
     .footerspan {
         display:inline-block;
 }
+    
      .navtop {
         text-align: center;
     }
@@ -282,13 +283,10 @@ span {
 
     li .top {
         padding-botom: 0.5rem;
-    
     }
 }
 
 @media only screen and (min-width: 50em) {
-    
-
     
     .nav {
         float: left;
@@ -328,8 +326,7 @@ span {
     }
         
     dd {
-        float: left;
-            
+        float: left;       
 }
     
     .gutter-space {
@@ -348,7 +345,6 @@ span {
         padding-right: 5%;
         padding-bottom: 0;
     }
-
     
 }
  
